corrected color contrast for sidebar to meet requirements

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ ul {
 li {
   display: flex;
   justify-content: center;
-  background-color: rgb(223, 21, 172);
+  background-color: rgb(94, 3, 71);
   border-radius: 1vh;
   width: 20vh;
 }
